--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,6 @@
 #home {
     min-height: 100vh;
+    min-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,10 +33,17 @@
     }
 }
 
+@media (max-width: 600px) {
+    .header-right .open-playfrens {
+        display: none;
+    }
+}
+
 .home-container {
     width: 90%;
-    max-width: 1120px;
+    max-width: 1132px;
     margin: 0 auto;
+    padding: 0 16px;
 }
 
 .nav-links {
@@ -123,6 +131,7 @@
     justify-content: center;
     height: 36px;
     width: fit-content;
+    text-wrap: nowrap;
     padding: 0 16px;
     border-radius: 16px;
     background-color: hsl(215 98% 44%);
